public/styles/style.css
/**********************/
/* MAIN CONTAINER */
/**********************/
.container {
  height: 100%;
  display: grid;
  grid-template-rows: 1fr 14fr;
  grid-template-columns: 1fr 6fr 2fr;
}

/**********************/
/* HEADER */
/**********************/
.primary-header {
  grid-column: 2 / span 2;

  display: flex;
  align-items: center;

  font-weight: 600;
  font-size: 2rem;

  padding: 1rem 1rem 1rem;
}

.primary-header__quiz-title {
  font-weight: 400;
}

/**********************/
/* NAVIGATION */
/**********************/
.nav {
  grid-row: 1 / span 2;

  padding: 1rem 2rem 1rem;
}

.nav__header-1 {
  font-size: 2.5rem;
  font-weight: 700;
  
  margin-top: 1rem;
  margin-bottom: 3rem;
}

.nav__header-2 {
  font-size: 2rem;
  font-weight: 600;

  margin-bottom: 1rem;
}

.nav__list {
  list-style-type: none;
  font-weight: 500;
  padding-left: 1rem;
  margin-bottom: 3rem;
}

.nav__list-item {
  font-size: 1.5rem;

  padding: .75rem 1rem .75rem;
  margin-bottom: .5rem;

  transition: 0.15s;
}

.nav__list-item:hover {
  cursor: pointer;

  background-color: #FF9A56;
  border-radius: 1rem;
  box-shadow: 0 3px 5px rgba(78, 78, 78, 0.089);
}

/**********************/
/* QUIZ CONTAINER */
/**********************/
.quiz-container {
}

/**********************/
/* QUIZ RESULTS */
/**********************/
.quiz-results-container {
  padding: 1rem 2rem 1rem;
}

.results-header-1 {
  display: flex;

  font-size: 2.5rem;
  font-weight: 600;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  position: relative;
}

.hover:hover .tooltip__body {
  visibility: visible;
  opacity: 1;
}

.hover:hover .tooltip__point {
  visibility: visible;
  opacity: 1;
}

.tooltip {
  visibility: hidden;
  position: absolute;
  z-index: 10;

  opacity: 0;
  transition: opacity 0.5s;
}

.tooltip__body {
  font-size: 1.5rem;
  max-width: 30rem;

  padding: 1.4rem 1.4rem;
  line-height: 2.5rem;

  border-radius: 1rem;

  left: 1rem;
  top: 3.2rem;

  border: 2px solid #AC683A;
}

.tooltip__point {
  min-width: 1rem;
  min-height: 1rem;
  rotate: 45deg;
  z-index: 11;
  
  right: 21.8rem;
  top: 2.7rem;

  border: 2px solid #AC683A;
  border-right-width: 0px;
  border-bottom-width: 0px;
}

.results-list-legend {
  font-size: 1.75rem;
  font-weight: 500;
}

.results-list-item {
  list-style: none;
  display: flex;
  align-items: center;
  /* justify-content: space-between; */

  max-width: 60%;

  font-size: 1.75rem;
  font-weight: 500;

  margin-bottom: 1.5rem;
  margin-left: 1.5rem;
}

.results-list-item__word {
  min-width: 6.5rem;
  margin-left: 1rem;
}

.results-list-item__seperator {
  min-width: 1rem;
}

.results-list-item__submitted-answer {
  /* min-width: 6rem; */
  margin-left: 1rem;
}

.quiz-results-icon {
  height: 2.6rem;
  width: 2.6rem;
  color: #333;
}

.quiz-results-icon__incorrect {
  color: rgba(255, 0, 0, 0.493);
}

.quiz-results-icon__info {
  color: #666;
  vertical-align: middle;

  margin-left: .5rem;
  height: 2rem;
  width: 2rem;
}

.quiz-results-icon__info:hover {
  cursor: pointer;
}

